# farpy

./: .gitignore  LICENSE  farpy.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
farpy/: app.py  application.py
farpy.egg-info/: PKG-INFO
