[metadata]
name = farpy
version = 0.0.1
author = Asad Rauf
author_email = asadrauflashari@gmail.com
license = MIT
description = Find and replace text in files and directories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rauf-asad/farpy
install_requires =
    click>=8.1.3

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts = 
    farpy = farpy:main